@@ -27,7 +27,7 @@ using GLib;
 /**
  * Arrays of arbitrary elements which grow automatically as elements are added.
  */
-public class Gee.ArrayList<G> : Iterable<G>, Collection<G>, List<G> {
+public class Gee.ArrayList<G> : Object, Iterable<G>, Collection<G>, List<G> {
 	public int size {
 		get { return _size; }
 	}
@@ -147,7 +147,7 @@ public class Gee.ArrayList<G> : Iterable<G>, Collection<G>, List<G> {
 		_items.resize (value);
 	}
 
-	private class Iterator<G> : Gee.Iterator<G> {
+	private class Iterator<G> : Object, Gee.Iterator<G> {
 		public ArrayList<G> list {
 			set {
 				_list = value;
