@@ -25,7 +25,7 @@ using GLib;
 /**
  * Represents a read-only collection of items in a well-defined order.
  */
-public class Gee.ReadOnlyList<G> : Iterable<G>, Collection<G>, List<G> {
+public class Gee.ReadOnlyList<G> : Object, Iterable<G>, Collection<G>, List<G> {
 	public int size {
 		get { return _list.size; }
 	}
@@ -97,7 +97,7 @@ public class Gee.ReadOnlyList<G> : Iterable<G>, Collection<G>, List<G> {
 		assert_not_reached ();
 	}
 
-	class Iterator<G> : Gee.Iterator<G> {
+	class Iterator<G> : Object, Gee.Iterator<G> {
 		public bool next () {
 			return false;
 		}
